tests/output/self_hosted/invalid_token_error.txt
tests/invalid_token_error.oomph:2: error: invalid syntax

    lol $
        ^

